setup/deployment/backend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hackathon-starter-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: hackathon-starter.example.com
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: hackathon-starter-backend
            port: 
              number: 80
